--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "eslint-config-aqua": "^1.4.1"
   },
   "dependencies": {
+    "chalk": "^1.1.3",
     "discord-akairo": "github:1computer1/discord-akairo",
-    "discord.js": "github:hydrabolt/discord.js"
+    "discord.js": "github:hydrabolt/discord.js",
+    "moment": "^2.18.1"
   }
 }
