--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "chalk": "^1.1.3",
     "discord-akairo": "github:1computer1/discord-akairo",
     "discord.js": "github:hydrabolt/discord.js",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "pg": "^6.2.4",
+    "sequelize": "^4.1.0"
   }
 }
