--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
+    "common-tags": "^1.4.0",
     "discord-akairo": "github:1computer1/discord-akairo",
     "discord.js": "github:hydrabolt/discord.js",
     "moment": "^2.18.1",
