--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "eslintConfig": {
     "extends": "aqua",
     "rules": {
-      "max-len": ["error", 120, 2, {
-        "ignoreStrings": true,
-        "ignoreTemplateLiterals": true
-      }]
+      "max-len": [
+        "error",
+        120,
+        2,
+        {
+          "ignoreStrings": true,
+          "ignoreTemplateLiterals": true
+        }
+      ]
     }
   },
   "contributors": [
@@ -27,7 +32,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "discord-akairo": "github:1computer1/discord-akairo",
-    "discord.js": "github:hydrabolt/discord.js#11.1-dev",
+    "discord.js": "^11.2.1",
     "moment": "^2.18.1",
     "pg": "^6.4.2",
     "sequelize": "^4.4.7"
