--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "discord-akairo": "github:1computer1/discord-akairo",
-    "discord.js": "^11.2.1",
+    "discord.js": "github:hydrabolt/discord.js",
     "moment": "^2.18.1",
     "pg": "^6.4.2",
     "sequelize": "^4.4.7"
