--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
-    "discord-akairo": "github:1computer1/discord-akairo",
+    "discord-akairo": "^7.5.0",
     "discord.js": "^11.2.1",
     "moment": "^2.18.1",
     "pg": "^6.4.2",
