Fix linter destructuring rule

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
           "ignoreStrings": true,
           "ignoreTemplateLiterals": true
         }
+      ],
+      "prefer-destructuring": [
+        "off"
       ]
     }
   },
