--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
       ],
       "prefer-destructuring": [
         "off"
+      ],
+      "quotes": [
+        "error",
+        "single"
       ]
     }
   },
