Require single quotes so that useless template strings aren't used

--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
           "ignoreStrings": true,
           "ignoreTemplateLiterals": true
         }
+      ],
+      "prefer-destructuring": [
+        "off"
+      ],
+      "quotes": [
+        "error",
+        "single"
       ]
     }
   },
