Add Sentry integration

--- a/example.config.json
+++ b/example.config.json
@@ -1,5 +1,6 @@
 {
     "token": "abcDEFghiJKLmnoPQRstuVWXyz-",
     "owner": ["123992700587343872", "86890631690977280"],
-    "dbURL": "postgres://role:password@postgres:5432/db_name"
+    "dbURL": "postgres://role:password@postgres:5432/db_name",
+    "sentryKey": "https://key:secret@sentry.io/project"
 }
