Add support for custom reaction emoji

--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
-    "discord-akairo": "8.0.0-beta.6",
+    "discord-akairo": "^8.0.0-beta.7",
     "discord.js": "github:discordjs/discord.js",
     "moment": "^2.24.0",
+    "node-emoji": "^1.10.0",
     "pg": "^7.9.0",
     "raven": "^2.6.4",
     "sequelize": "^5.2.12"
